--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Intro + Google Drive Player</title>
+  <title>Pushpa 2 Full Movie</title>
   <style>
     * {
       margin: 0;
